configs/flux-operator/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flux-operator-receivers
  namespace: flux-system
spec:
  gatewayClassName: flux-operator-receivers
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-receivers-flux
            group: ""
            kind: Secret
