configs/flux-operator/overlays/nishir/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-receivers
  namespace: flux-system
spec:
  parentRefs:
    - name: flux-operator-receivers
      sectionName: https
  hostnames:
    - receivers.flux.i.shikanime.studio
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
